--- a/app/src/main/res/layout/fragment_itinerary_detail_header.xml
+++ b/app/src/main/res/layout/fragment_itinerary_detail_header.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:background="@color/background_tab_pressed"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
+    <ImageView
+        android:id="@+id/ivItineraryDetailPhoto"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/places_ic_clear" />
 
     <TextView
         android:id="@+id/tvItineraryDetailTitle"
