--- a/app/src/main/res/layout/item_stop.xml
+++ b/app/src/main/res/layout/item_stop.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:id="@+id/rlNavBlock"
@@ -12,7 +14,7 @@
 
         <TextView
             android:id="@+id/tvNavTitle"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -23,21 +25,44 @@
 
     <RelativeLayout
         android:id="@+id/rlStopBlock"
-        android:layout_below="@+id/rlNavBlock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true">
+        android:layout_below="@+id/rlNavBlock"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
+
+        <ImageView
+            android:id="@+id/ivStopItemPhoto"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            app:srcCompat="@drawable/places_ic_clear" />
 
         <TextView
             android:id="@+id/tvStopTitle"
-            android:layout_width="200dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="false"
-            android:layout_alignParentStart="false"
-            android:layout_centerHorizontal="true"
-            android:background="@color/background_tab_pressed"
-            android:text="Stop Title"
-            android:textAlignment="center" />
+            android:layout_alignLeft="@id/ivStopItemPhoto"
+            android:gravity="left"
+            android:text="Stop Title" />
+
+        <TextView
+            android:id="@+id/tvStopAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/ivStopItemPhoto"
+            android:layout_below="@id/tvStopTitle"
+            android:text="Stop Address" />
+
+        <TextView
+            android:id="@+id/tvStopDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/ivStopItemPhoto"
+            android:layout_below="@id/tvStopAddress"
+            android:text="Stop Description" />
     </RelativeLayout>
 
 </RelativeLayout>
