--- a/app/src/main/res/layout/fragment_itinerary_detail_header.xml
+++ b/app/src/main/res/layout/fragment_itinerary_detail_header.xml
@@ -38,4 +38,15 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tvItineraryDetailDescription"
         android:text="Features : San Jose , $ , Food" />
+
+    <ImageView
+        android:id="@+id/ivItineraryDetailBookmark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:srcCompat="@drawable/ic_bookmark_border" />
 </RelativeLayout>
