--- a/app/src/main/res/layout/item_itinerary.xml
+++ b/app/src/main/res/layout/item_itinerary.xml
@@ -39,4 +39,16 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:text="Features: " />
+
+    <ImageView
+        android:id="@+id/ivItineraryItemBookmark"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:srcCompat="@drawable/ic_bookmark_border" />
+
 </RelativeLayout>
