--- a/app/src/main/res/layout/fragment_create_header.xml
+++ b/app/src/main/res/layout/fragment_create_header.xml
@@ -2,9 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rlCreateHeader"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:background="@color/background_tab_pressed"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:background="@drawable/gradient"
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/textView3"
@@ -19,26 +20,26 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/etCreateDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:ems="10"
-        android:hint="Description"
-        android:inputType="textPersonName"
-        android:text="Name" />
-
-    <EditText
+    <TextView
         android:id="@+id/etCreateTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@id/etCreateDescription"
+        android:layout_below="@id/textView3"
         android:ems="10"
         android:hint="Title"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/etCreateDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/etCreateTitle"
+        android:ems="10"
+        android:hint="Description"
+        android:inputType="textPersonName"
+        android:text="Description" />
 
     <Button
         android:id="@+id/btnCreateDone"
