--- a/app/src/main/res/layout/fragment_create_itinerary.xml
+++ b/app/src/main/res/layout/fragment_create_itinerary.xml
@@ -30,9 +30,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/etCreateItineraryTitle"
         android:ems="10"
-        android:hint="Description"/>
+        android:hint="Description"
+        android:inputType="textMultiLine"
+        android:minLines="5"
+        android:gravity="top" />
 
-    <TextView
+    <!--<TextView
         android:id="@+id/tvTypeLabel"
         android:layout_below="@id/etCreateItineraryDescription"
         android:layout_width="wrap_content"
@@ -46,7 +49,7 @@
         android:layout_below="@+id/etCreateItineraryDescription"
         android:layout_toRightOf="@+id/tvTypeLabel"
         android:layout_toEndOf="@+id/tvTypeLabel"
-        />
+        />-->
 
     <Button
         android:id="@+id/btnCreateItinerarySave"
