--- a/app/src/main/res/layout/fragment_itinerary_detail_header.xml
+++ b/app/src/main/res/layout/fragment_itinerary_detail_header.xml
@@ -1,23 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:background="@drawable/gradient"
+    android:orientation="vertical"
+    android:padding="10dp">
 
-    <ImageView
+    <!--<ImageView
         android:id="@+id/ivItineraryDetailPhoto"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
-        app:srcCompat="@drawable/places_ic_clear" />
+        app:srcCompat="@drawable/places_ic_clear" />-->
 
     <TextView
         android:id="@+id/tvItineraryDetailTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ItineraryTitle" />
+        android:layout_marginBottom="5dp"
+        android:text="ItineraryTitle"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/tvItineraryDetailDescription"
@@ -37,7 +42,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/tvItineraryDetailDescription"
-        android:text="Features : San Jose , $ , Food" />
+        android:text="Features:" />
 
     <ImageView
         android:id="@+id/ivItineraryDetailBookmark"
@@ -46,7 +51,14 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
         app:srcCompat="@drawable/ic_bookmark_border" />
+
+    <ImageView
+        android:id="@+id/ivItineraryDetailMap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/tvItineraryDetailFeatures"
+        android:layout_alignLeft="@+id/ivItineraryDetailBookmark"
+        app:srcCompat="@drawable/ic_map" />
+
 </RelativeLayout>
