--- a/app/src/main/res/layout/fragment_itinerary_list.xml
+++ b/app/src/main/res/layout/fragment_itinerary_list.xml
@@ -8,7 +8,10 @@
     <ListView
         android:id="@+id/lvItineraries"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabCreate"
