--- a/app/src/main/res/layout/item_stop.xml
+++ b/app/src/main/res/layout/item_stop.xml
@@ -9,60 +9,66 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_margin="10dp"
-        android:background="@android:color/holo_green_light">
+        android:layout_marginTop="10dp"
+        android:background="#cfd8dc">
 
         <TextView
             android:id="@+id/tvNavTitle"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:text="Navigate from x to y" />
+            android:layout_margin="5dp"
+            android:padding="3dp"
+            android:text="Navigate to next stop"
+            android:textAlignment="center" />
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/rlStopBlock"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/rlNavBlock"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_below="@id/rlNavBlock"
+        android:layout_margin="10dp"
+        app:cardCornerRadius="2dp"
+        app:cardElevation="2dp"
+        app:cardPreventCornerOverlap="false"
+        app:contentPadding="10dp">
 
-        <ImageView
-            android:id="@+id/ivStopItemPhoto"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="120dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/places_ic_clear" />
-
-        <TextView
-            android:id="@+id/tvStopTitle"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/ivStopItemPhoto"
-            android:gravity="left"
-            android:text="Stop Title" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/tvStopAddress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/ivStopItemPhoto"
-            android:layout_below="@id/tvStopTitle"
-            android:text="Stop Address" />
+            <ImageView
+                android:id="@+id/ivStopItemPhoto"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_marginBottom="4dp"
+                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
+                app:srcCompat="@drawable/gradient" />
 
-        <TextView
-            android:id="@+id/tvStopDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/ivStopItemPhoto"
-            android:layout_below="@id/tvStopAddress"
-            android:text="Stop Description" />
-    </RelativeLayout>
 
+            <TextView
+                android:id="@+id/tvStopTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="Stop Title"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tvStopAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Stop Address" />
+
+            <TextView
+                android:id="@+id/tvStopFeatures"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Features: " />
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 </RelativeLayout>
