--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#f881a8</color>
+    <color name="gradient_start">#c2f2d0</color>
+    <color name="gradient_end">#d2e8ae</color>
 </resources>
