--- a/app/src/main/res/layout/fragment_create_header.xml
+++ b/app/src/main/res/layout/fragment_create_header.xml
@@ -37,9 +37,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/etCreateTitle"
         android:ems="10"
-        android:hint="Description"
         android:inputType="textPersonName"
-        android:text="Description" />
+        android:text="" />
 
     <Button
         android:id="@+id/btnCreateDone"
