--- a/app/src/main/res/layout/fragment_itinerary_detail_header.xml
+++ b/app/src/main/res/layout/fragment_itinerary_detail_header.xml
@@ -61,4 +61,11 @@
         android:layout_alignLeft="@+id/ivItineraryDetailBookmark"
         app:srcCompat="@drawable/ic_map" />
 
+    <ImageView
+        android:id="@+id/ivItineraryDetailDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toLeftOf="@+id/ivItineraryDetailMap"
+        app:srcCompat="@drawable/ic_delete" />
+
 </RelativeLayout>
