--- a/app/src/main/res/layout/fragment_itinerary_list.xml
+++ b/app/src/main/res/layout/fragment_itinerary_list.xml
@@ -22,4 +22,26 @@
         android:src="@drawable/ic_add_white"
         app:layout_anchor="@id/lvItineraries"
         app:layout_anchorGravity="bottom|right|end" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|end"
+        android:layout_margin="16dp"
+        android:visibility="invisible"
+        app:layout_anchor="@id/fabCreate"
+        app:layout_anchorGravity="top" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabPrefs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_tune"
+        app:backgroundTint="@color/gradient_start"
+        app:layout_anchor="@id/fab_invisible"
+        app:layout_anchorGravity="top" />
+
 </android.support.design.widget.CoordinatorLayout>
