--- a/app/src/main/res/layout/item_itinerary.xml
+++ b/app/src/main/res/layout/item_itinerary.xml
@@ -4,10 +4,11 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
-        android:id="@+id/card_view"
+        android:id="@+id/cvItinerary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        app:cardBackgroundColor="#e8f5e9"
         app:cardCornerRadius="2dp"
         app:cardElevation="2dp"
         app:cardPreventCornerOverlap="false"
