--- a/app/src/main/res/layout/fragment_create_itinerary.xml
+++ b/app/src/main/res/layout/fragment_create_itinerary.xml
@@ -21,19 +21,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvCreateItineraryLabel"
-        android:ems="10"
-        android:hint="Title" />
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:background="@color/text_bg"
+        android:hint="Title"
+        android:padding="5dp"
+        android:textColorLink="@color/colorPrimaryDark"
+        android:textCursorDrawable="@null"
+        android:textSize="16sp" />
 
     <EditText
         android:id="@+id/etCreateItineraryDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/etCreateItineraryTitle"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/text_bg"
         android:ems="10"
+        android:gravity="top"
         android:hint="Description"
         android:inputType="textMultiLine"
         android:minLines="5"
-        android:gravity="top" />
+        android:padding="5dp"
+        android:textCursorDrawable="@null"
+        android:textSize="16sp" />
 
     <!--<TextView
         android:id="@+id/tvTypeLabel"
