--- a/app/src/main/res/layout/fragment_itinerary_list.xml
+++ b/app/src/main/res/layout/fragment_itinerary_list.xml
@@ -20,13 +20,14 @@
         android:layout_gravity="bottom|right"
         android:layout_margin="16dp"
         android:src="@drawable/ic_add_white"
+        app:backgroundTint="@color/colorAccentOrange"
         app:layout_anchor="@id/lvItineraries"
         app:layout_anchorGravity="bottom|right|end" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_invisible"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="26dp"
+        android:layout_height="19dp"
         android:layout_gravity="top|end"
         android:layout_margin="16dp"
         android:visibility="invisible"
@@ -40,7 +41,7 @@
         android:layout_gravity="right"
         android:layout_margin="16dp"
         android:src="@drawable/ic_tune"
-        app:backgroundTint="@color/gradient_start"
+        app:backgroundTint="@color/colorPrimaryDark"
         app:layout_anchor="@id/fab_invisible"
         app:layout_anchorGravity="top" />
 
