--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,6 +41,7 @@
         android:layout_marginTop="10dp"
         android:background="@color/text_bg"
         android:hint="Password"
+        android:imeOptions="actionGo"
         android:inputType="textPassword"
         android:padding="15dp"
         android:textSize="16dp" />
@@ -54,6 +55,7 @@
         android:layout_marginTop="10dp"
         android:background="@color/text_bg"
         android:hint="Email Address"
+        android:imeOptions="actionGo"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textSize="16sp" />
