--- a/app/src/main/res/layout/fragment_create_header.xml
+++ b/app/src/main/res/layout/fragment_create_header.xml
@@ -15,7 +15,6 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="15dp"
         android:hint="Title"
-        android:inputType="textPersonName"
         android:textSize="18sp"
         android:textStyle="bold" />
 
@@ -24,8 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/etCreateTitle"
-        android:ems="10"
-        android:inputType="textPersonName"
+        android:layout_weight="1"
         android:text="" />
 
 
